0030135: Visualization, TKOpenGl - frame statistics do not include information about instanced structures

OpenGl_FrameStats now takes into account OpenGl_Structure::InstancedStructure().
OpenGl_View::renderStructs() - fixed resetting non-culled structure counters.